# shouldersOfGiants.rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
docs/: lessons.md  todo.md  workflows.md
shouldersofgiants/: train_gpt2.rs
src/: main  main.rs  train_gpt2.py
