[tool.poetry]
name = "shouldersofgiants-rs"
version = "0.1.0"
description = "A GPT2 implementation in Rust, standing on Karpathy's shoulders"
authors = ["evelynmitchell <efmphone@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "shouldersofgiants"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.2"
tqdm = "^4.66.3"
numpy = "^1.26.4"
tiktoken = "^0.6.0"
torch = "^2.2.2"
transformers = "^4.39.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
